[package]
name = "plotters-imgui"
version = "0.1.0"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
edition = "2018"

[dependencies]
plotters-backend = "^0.3.*"
imgui = { git = "https://github.com/imgui-rs/imgui-rs.git", rev = "2db100bf8f2e837cd471636de18d379caafe29a5"} # WIP 0.9ish
earcutr = { git = "https://github.com/donbright/earcutr", rev = "aaa18bfdfe581db26bb9869aec170329b4e14f4c" }
