[package]
name = "imgui-plotters-examples"
version = "0.0.0"
edition = "2018"
authors = ["Moritz Drexl <mdrexl@fastmail.fm>"]
publish = false

[dev-dependencies]
glium = { version = "0.30", default-features = true }
imgui = "0.8"
imgui-glium-renderer = "0.8"
imgui-winit-support = "0.8"

plotters = { version = "0.3", default-features = false, features = ["line_series"] }
plotters-imgui = { path = "../" }
